[tool.poetry]
name = "flight-tracker"
version = "0.1.0"
description = "A package helps traveler to track flight information"
authors = ["Heting Ni"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
